[package]
name = "arceos-musl-app-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axstd = { path = "../../ulib/axstd", features = ["alloc", "paging", "multitask"], optional = true }
axconfig = { path = "../../modules/axconfig" }
axruntime = { path = "../../modules/axruntime" }
riscv = "0.10"
xmas-elf = "0.7.0"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
